# data-engineering-docker

./: Dockerfile  README.md  pyproject.toml
1_pipeline/: notebook.ipynb  run_it.txt
2_workflow-orchestration/: Dockerfile  docker-compose.yaml  etl_postgres.yaml
3_data-warehouse/: load_data.py  module3-homework.md
module2-homework/: README.md  external_tables.sql
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  pipeline.py
test/: script.py
workflow-orchestration/: docker-compose.yaml  elt_bigquery.yaml  gcp_setup.yaml
